# fund-advisor

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  app.py  main.py  portfolio.yaml  pyproject.toml  requirements.txt
.sisyphus/run-continuation/: ses_1ed5644a2ffewoU525R1D3Nuxb.json
conductor/: frontend-refactor-plan.md
config/: config.yaml
docs/: architecture.html
docs/superpowers/specs/: 2026-05-09-fund-etf-advisory-system-design.md
src/: config.py
src/analysis/: aggregator.py  engine.py  risk.py  rotation.py  trend.py  valuation.py
src/api/: main.py  routes.py  task_routes.py  tasks.py
src/data/: models.py  pipeline.py  portfolio.py  storage.py  validation.py
src/llm/: client.py  prompts.py  report_generator.py  report_period.py  report_renderer.py  report_schema.py
src/notify/: channels.py
src/reporting/: __init__.py  audit.py  change.py  evaluation.py  evidence.py  verifier.py
src/scheduler/: jobs.py
src/utils/: helpers.py  logging_config.py
tests/: __init__.py  test_akshare_global_provider.py  test_analysis_engine.py  test_chained_provider.py  test_config_env.py  test_data_pipeline.py  test_fred_provider.py  test_hhxg_collector.py  test_llm_client.py  test_provider_base.py  test_provider_cache.py  test_report_period.py  test_report_quality_regression.py  test_reporting_quality.py  test_retry_rate_limit.py  test_stooq_provider.py  test_symbol_map.py  test_yfinance_provider.py
tests/fixtures/: __init__.py  report_quality_cases.py
web/: index.html  package-lock.json  package.json  vite.config.js
web/src/: main.js  style.css
(+13 files in other folders)
