[project]
name = "fund-advisor"
version = "0.1.0"
description = "个人基金ETF投资建议系统 - A股+全球市场，自动化数据采集、量化分析、LLM日报生成"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "fund-advisor" }]

dependencies = [
    "akshare>=1.16.0",
    "yfinance>=0.2.50",
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "apscheduler>=3.10.0",
    "httpx>=0.27.0",
    "loguru>=0.7.0",
    "ta>=0.11.0",
    "pandas-datareader>=0.10.0",
    "lark-oapi>=1.4.0",
    "streamlit>=1.57.0",
    "plotly>=6.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0",
]

[tool.setuptools.packages.find]
include = ["src*"]

[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"
